Fixed: word-break only on links that contain 'http'

--- a/app/assets/stylesheets/flandersarthub/modules/_footer.scss
+++ b/app/assets/stylesheets/flandersarthub/modules/_footer.scss
@@ -32,7 +32,7 @@
             @media screen and (max-width: 417px) {
                 height: 80px;
             }
-            @media screen and (max-width: 320px) {
+            @media screen and (max-width: 340px) {
                 height: 60px;
             }
             @media screen and (max-width: 270px) {
@@ -60,7 +60,7 @@
             display: inline;
             margin-left: 2em;
             margin-right: 2em;
-            @media screen and (max-width: 320px) {
+            @media screen and (max-width: 340px) {
                 display: block;
                 text-align: center;
             }
