--- a/app/assets/stylesheets/flandersarthub/modules/_links.scss
+++ b/app/assets/stylesheets/flandersarthub/modules/_links.scss
@@ -1,6 +1,5 @@
 a {
     color: #0bb4d3;
-    word-break: break-all;
 }
 
 a:active,
